--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
 	<title>Ting</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
 	<h1>Ting-Yu Lin</h1>
+
+	<ul>
+		<li>臺中市立西苑高級中學國中部</li>
+		<li>臺中市私立立人高級中學</li>
+		<li>逢甲大學通訊工程學系</li>
+	</ul>
 	<p>Powered by Github Inc.<p>
 </body>
 </html>
